fix(control-bar): end value in align-items is not compatible with old Safari
The property `align-items` is not compatible with the value `end` on Safari
versions less than 15.4.

Changes the `dvh` unit used in the demo, which is not compatible with older
browsers.

- change value of `align-items`
- use % instead of dvh in the demo page

--- a/scss/components/_control-bar.scss
+++ b/scss/components/_control-bar.scss
@@ -4,7 +4,7 @@
 ******************************************************************************
 */
 &:not(.vjs-audio-only-mode) .vjs-control-bar {
-  align-items: end;
+  align-items: flex-end;
   height: 6em;
   padding-inline: 1em;
   background: linear-gradient(#000 0%, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0.7) 100%);
